src/test/deca/context/invalid/ContextAvecObjet/Visibility/protectedFieldinClass.deca
// Description:
//    Appel à un champ protégé dans une classe
//
// Resultats:
//    Erreur contextuelle ligne 14
//    appel impossible de x : champs protégé

class A {
    protected int x;
}
class B{
    A a = new A();
    int x = a.x;
}
